--- a/assets/sass/components/post.scss
+++ b/assets/sass/components/post.scss
@@ -50,6 +50,10 @@
         float: left;
         margin-right: px(20);
     }
+    
+    .Post-intro {
+        margin-left: px(120);
+    }
 }
 
 .Post-content {
